{
  "version": 4,
  "terraform_version": "0.12.7",
  "serial": 47,
  "lineage": "199d538d-b407-75fd-2903-245515ed215e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "gw_eip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0918711063d20872b",
            "domain": "vpc",
            "id": "eipalloc-024b788c097c5d152",
            "network_interface": "eni-079aa32a66a93b1cd",
            "private_dns": "ip-10-0-2-169.ec2.internal",
            "private_ip": "10.0.2.169",
            "public_dns": "ec2-3-216-110-81.compute-1.amazonaws.com",
            "public_ip": "3.216.110.81",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00d4e9ff62bc40e03",
            "arn": "arn:aws:ec2:us-east-1:770415717124:instance/i-01bdadbb58bb2087b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-01bdadbb58bb2087b",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "bastionkey",
            "monitoring": false,
            "primary_network_interface_id": "eni-05c75b5132389d761",
            "private_dns": "ip-10-0-2-40.ec2.internal",
            "private_ip": "10.0.2.40",
            "public_ip": "54.161.15.237",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0c230931d759898af",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-09e531975d49c4abb"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-070902c24d7d3ac7c",
            "tags": {
              "Name": "bastion"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09e531975d49c4abb"
            ]
          },
          "depends_on": [
            "aws_key_pair.bastion",
            "aws_security_group.allow_ssh",
            "aws_subnet.pub_subnet",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "eks_master",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00d4e9ff62bc40e03",
            "arn": "arn:aws:ec2:us-east-1:770415717124:instance/i-0a8973a6c375dfc6d",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1d",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0a8973a6c375dfc6d",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "bastionkey",
            "monitoring": false,
            "primary_network_interface_id": "eni-08b86c06ab7e6e6f5",
            "private_dns": "ip-10-0-1-167.ec2.internal",
            "private_ip": "10.0.1.167",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0f6af0204942c83db",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-09e531975d49c4abb"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05d2be10b6c29d45d",
            "tags": {
              "Name": "eks master"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09e531975d49c4abb"
            ]
          },
          "depends_on": [
            "aws_key_pair.bastion",
            "aws_security_group.allow_ssh",
            "aws_subnet.pvt_subnet",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "eks_worker",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00d4e9ff62bc40e03",
            "arn": "arn:aws:ec2:us-east-1:770415717124:instance/i-07a740ead75f0440a",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1d",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-07a740ead75f0440a",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "bastionkey",
            "monitoring": false,
            "primary_network_interface_id": "eni-05cfbcf56f9fc83d6",
            "private_dns": "ip-10-0-1-150.ec2.internal",
            "private_ip": "10.0.1.150",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-047c1fb5bcba1af21",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-09e531975d49c4abb"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05d2be10b6c29d45d",
            "tags": {
              "Name": "eks worker"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09e531975d49c4abb"
            ]
          },
          "depends_on": [
            "aws_key_pair.bastion",
            "aws_security_group.allow_ssh",
            "aws_subnet.pvt_subnet",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-05c47596af2cafbce",
            "owner_id": "770415717124",
            "tags": {
              "Name": "my_vpc_ig"
            },
            "vpc_id": "vpc-0ce3da9b18ed8a69a"
          },
          "depends_on": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-024b788c097c5d152",
            "id": "nat-0219b3c9d00d74554",
            "network_interface_id": "eni-079aa32a66a93b1cd",
            "private_ip": "10.0.2.169",
            "public_ip": "3.216.110.81",
            "subnet_id": "subnet-070902c24d7d3ac7c"
          },
          "depends_on": [
            "aws_eip.gw_eip",
            "aws_subnet.pub_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_routetable",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-076f8e8cce9de2416",
            "owner_id": "770415717124",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0219b3c9d00d74554",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-0ce3da9b18ed8a69a"
          },
          "depends_on": [
            "aws_nat_gateway.gw",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_routetable",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-025784c0bf01af543",
            "owner_id": "770415717124",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05c47596af2cafbce",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-0ce3da9b18ed8a69a"
          },
          "depends_on": [
            "aws_internet_gateway.gw",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ca745f057925ad24",
            "route_table_id": "rtb-076f8e8cce9de2416",
            "subnet_id": "subnet-05d2be10b6c29d45d"
          },
          "depends_on": [
            "aws_route_table.private_routetable",
            "aws_subnet.pvt_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cddf79422cecbe4e",
            "route_table_id": "rtb-025784c0bf01af543",
            "subnet_id": "subnet-070902c24d7d3ac7c"
          },
          "depends_on": [
            "aws_route_table.public_routetable",
            "aws_subnet.pub_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:770415717124:security-group/sg-09e531975d49c4abb",
            "description": "Allow ssh inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09e531975d49c4abb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": null,
            "owner_id": "770415717124",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0ce3da9b18ed8a69a"
          },
          "depends_on": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:770415717124:subnet/subnet-070902c24d7d3ac7c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-070902c24d7d3ac7c",
            "map_public_ip_on_launch": true,
            "owner_id": "770415717124",
            "tags": {
              "Name": "public_subnet1"
            },
            "vpc_id": "vpc-0ce3da9b18ed8a69a"
          },
          "depends_on": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pvt_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:770415717124:subnet/subnet-05d2be10b6c29d45d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-05d2be10b6c29d45d",
            "map_public_ip_on_launch": false,
            "owner_id": "770415717124",
            "tags": {
              "Name": "private_subnet1"
            },
            "vpc_id": "vpc-0ce3da9b18ed8a69a"
          },
          "depends_on": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:770415717124:vpc/vpc-0ce3da9b18ed8a69a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0136218ffd7db3c25",
            "default_route_table_id": "rtb-055aaa7b272e758c7",
            "default_security_group_id": "sg-00791d6f272e4509e",
            "dhcp_options_id": "dopt-cfe3ecb4",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0ce3da9b18ed8a69a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-055aaa7b272e758c7",
            "owner_id": "770415717124"
          }
        }
      ]
    }
  ]
}